fixed spacing for edit link in comments

--- a/rtl.css
+++ b/rtl.css
@@ -526,7 +526,7 @@ a img {
   margin-left: 4px;
   font-size: 10px;
 }
-.comment-list .comment-footer .fa-pencil {
+.comment-list .comment-footer .fa-edit {
   margin-right: 7px;
 }
 .comment-list .children {
