--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -55,7 +55,7 @@
       margin-right: 4px;
       font-size: 10px;
     }
-    .fa-pencil {
+    .fa-edit {
       margin-left: 7px;
     }
   }
