--- a/style.css
+++ b/style.css
@@ -526,7 +526,7 @@ a img {
   margin-right: 4px;
   font-size: 10px;
 }
-.comment-list .comment-footer .fa-pencil {
+.comment-list .comment-footer .fa-edit {
   margin-left: 7px;
 }
 .comment-list .children {
